syntax = "proto3";

package friend;

option go_package = "github.com/mshmnv/SocialNetwork//friend";

import "google/api/annotations.proto";

service FriendAPI {

  rpc Set (SetRequest) returns (SetResponse) {
    option (google.api.http) = {
      put: "/friend/set/{friend_id}"
      body: "*"
    };
  }
  rpc Delete (DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      put: "/friend/delete/{friend_id}"
      body: "*"
    };
  }
}

message SetRequest {
    uint64 user_id = 1;
    uint64 friend_id = 2;
}
message SetResponse {}

message DeleteRequest {
  uint64 user_id = 1;
  uint64 friend_id = 2;
}
message DeleteResponse {}